--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
